# poly-stt

./: .gitignore  README.md  pyproject.toml
poly_stt/: __init__.py  stt.py
poly_stt/engines/: __init__.py  base.py  whisper.py
